--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "compilerOptions": {
         "target": "esnext",
-        "typeRoots": ["src/@types", "node_modules/@types"]
+        "typeRoots": [
+            "src/@types",
+            "node_modules/@types"
+        ]
     },
     "lib": [
         "dom"
